--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
   "name": "probabilistic-earley-parser",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "A parser for parsing Probabilistic Context Free Grammars",
   "main": "dist/index.js",
   "author": "Maarten Trompper",
   "license": "MIT",
+  "repository": "git@github.com:digitalheir/java-probabilistic-earley-parser.git",
   "scripts": {
-    "build:ts": "tsc",
-    "build": "npm run build:ts",
+    "build": "npm run build:clean && npm run build:npm && npm run build:min",
+    "build:clean": "rimraf dist",
+    "build:min": "webpack -p",
+    "build:npm": "tsc",
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
     "test:chart": "mocha -r ts-node/register test/**/chart.spec.ts",
     "test:grammar": "mocha -r ts-node/register test/**/grammar.spec.ts",
     "test:earley": "mocha -r ts-node/register test/**/earley.spec.ts"
   },
   "dependencies": {
-    "core-js": "2.4.1",
-    "semiring": "1.1.2"
+    "core-js": "^2.4.1",
+    "semiring": "^1.2.3"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.35",
     "@types/chai": "^3.4.34",
+    "@types/core-js": "0.9.35",
     "@types/mocha": "^2.2.34",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
+    "ts-loader": "^1.3.3",
     "ts-node": "^2.0.0",
-    "typescript": "^2.1.4"
+    "tslint": "^4.3.1",
+    "tslint-loader": "^3.3.0",
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0",
+    "yargs": "latest"
   }
 }
