--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "license": "MIT",
   "repository": "git@github.com:digitalheir/java-probabilistic-earley-parser.git",
   "scripts": {
-    "build": "npm run build:clean && npm run build:npm && npm run build:min",
+    "build": "npm run build:clean && npm run build:npm && npm run build:cp && npm run build:min",
     "build:clean": "rimraf dist",
     "build:min": "webpack -p",
     "build:npm": "tsc",
+    "build:cp": "copyfiles .npmignore README.md package.json dist/",
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
     "test:chart": "mocha -r ts-node/register test/**/chart.spec.ts",
     "test:grammar": "mocha -r ts-node/register test/**/grammar.spec.ts",
@@ -24,7 +25,9 @@
     "@types/chai": "^3.4.34",
     "@types/core-js": "0.9.35",
     "@types/mocha": "^2.2.34",
+    "rimraf": "^2.5.4",
     "chai": "^3.5.0",
+    "copyfiles": "^1.0.0",
     "mocha": "^3.2.0",
     "ts-loader": "^1.3.3",
     "ts-node": "^2.0.0",
