--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
     "test:earley": "mocha -r ts-node/register test/**/earley.spec.ts"
   },
   "dependencies": {
+    "babel-preset-es2016": "^6.16.0",
     "semiring": "^1.2.3"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.34",
-    "rimraf": "^2.5.4",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "babel-core": "^6.7.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
     "mocha": "^3.2.0",
+    "rimraf": "^2.5.4",
     "ts-loader": "^1.3.3",
     "ts-node": "^2.0.0",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.0-rc.3",
     "yargs": "latest"
   }
 }
