--- a/package.json
+++ b/package.json
@@ -12,38 +12,35 @@
     "build:min": "webpack -p",
     "build:npm": "tsc",
     "build:cp": "copyfiles .npmignore README.md package.json dist/",
-    "test": "mocha -r ts-babel-node/register test/**/*.spec.ts",
-    "test:chart": "mocha -r ts-babel-node/register test/**/chart.spec.ts",
-    "test:grammar": "mocha -r ts-babel-node/register test/**/grammar.spec.ts",
-    "test:earley": "mocha -r ts-babel-node/register test/**/earley.spec.ts"
+    "test": "mocha  --require ts-node/register test/**/*.spec.ts",
+    "test:chart": "mocha  --require ts-node/register test/**/chart.spec.ts",
+    "test:grammar": "mocha  --require ts-node/register test/**/grammar.spec.ts",
+    "test:earley": "mocha  --require ts-node/register test/**/earley.spec.ts"
   },
   "dependencies": {
-    "semiring": "^1.2.3"
+    "semiring": "^1.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.34",
-    "awesome-typescript-loader": "^3.0.0-beta.17",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "convert-source-map": "^1.3.0",
-    "copyfiles": "^1.0.0",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "ts-loader": "^9.2.6",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.3.4",
+    "convert-source-map": "^1.8.0",
+    "copyfiles": "^2.4.1",
+    "mocha": "^9.1.3",
+    "rimraf": "^3.0.2",
     "ts-babel-node": "^1.1.1",
-    "ts-loader": "^1.3.3",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.4",
-    "webpack": "^2.2.0-rc.3",
-    "yargs": "latest"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.3",
+    "webpack": "^5.65.0",
+    "yargs": "^17.3.0"
   }
 }
