--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
-    "ts-loader": "^9.2.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
@@ -38,9 +37,11 @@
     "mocha": "^9.1.3",
     "rimraf": "^3.0.2",
     "ts-babel-node": "^1.1.1",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3",
     "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "yargs": "^17.3.0"
   }
 }
